<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditCardDetails"
    android:background="@drawable/interface1">

    <TextView
        android:id="@+id/topic4"
        android:text="@string/cr_de"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="50dp" />
    <EditText
        android:id="@+id/creditCardOwnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/cr_name"
        android:layout_below="@+id/topic4"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/red"
         />

    <EditText
        android:id="@+id/creditCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/red"
        android:text="@string/cr_number"
        android:layout_below="@+id/creditCardOwnerName"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

         />

    <EditText
        android:id="@+id/creditCardExpDate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/creditCardNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:inputType="date"
        android:text="@string/cr_ex"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/creditCardCVC"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/creditCardNumber"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/creditCardExpDate"
        android:layout_toRightOf="@id/creditCardExpDate"
        android:inputType="textPassword"
        android:text="@string/cr_cvc" />

    <Button
        android:id="@+id/confirm_button_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/btn_con"
        android:layout_below="@id/creditCardExpDate"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>



</RelativeLayout>