<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrder"
    android:background="@drawable/interface1">
    <TextView
        android:id="@+id/topic3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="53dp"
        android:text="@string/topic_1_1"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/Crt_Customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="522dp"
        android:text="@string/name_cus"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Crt_Customer_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintBaseline_toBaselineOf="@+id/Crt_Customer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Crt_Customer_name" />

    <TextView
        android:id="@+id/Crt_Customer_Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="444dp"
        android:text="@string/phone_cus"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crt_Customer_name" />

    <EditText
        android:id="@+id/Crt_Customer_Contact_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/Crt_Customer_Contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Crt_Customer_Contact" />

    <TextView
        android:id="@+id/Crt_Customer_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="400dp"
        android:text="@string/add_cus_"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crt_Customer_Contact"
        tools:text="@string/add_cus_" />

    <EditText
        android:id="@+id/Crt_Customer_Address_1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintBaseline_toBaselineOf="@+id/Crt_Customer_Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Crt_Customer_Address" />

    <TextView
        android:id="@+id/Crt_Customer_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="314dp"

        android:text="@string/postal_cus"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crt_Customer_Address" />

    <EditText
        android:id="@+id/Crt_Customer_postal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="298dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/Crt_Customer_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Crt_Customer_postal" />

    <TextView
        android:id="@+id/Crt_Customer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="249dp"
        android:text="@string/email_cus"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crt_Customer_postal"
        tools:text="@string/email_cus" />

    <EditText
        android:id="@+id/Crt_Customer_email_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/Crt_Customer_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Crt_Customer_email" />



    <Button
        android:id="@+id/button2_ccc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="131dp"
        android:text="@string/btn_con"
        android:background="@drawable/button2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crt_Customer_email"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>