<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/interface1"
    tools:context=".AdmHomeActivity">

    <TextView
        android:id="@+id/Home_header_txt"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:text="@string/Adm_Home_Header"
        android:textColor="#BF007A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/adm_home_food_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Adm_food"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/HomeFoodimageButton"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Home_header_txt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="21dp"
        android:layout_marginTop="168dp"
        android:text="@string/Adm_customer"
        android:textColor="#020202"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/HomeCustomersimageButton"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adm_home_food_txt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/Adm_Drivers"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/HomeDriverimageButton"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/HomeFoodimageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Home_header_txt"
        app:srcCompat="@drawable/adm_food" />

    <ImageButton
        android:id="@+id/HomeCustomersimageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeFoodimageButton"
        app:srcCompat="@drawable/adm_customers" />

    <ImageButton
        android:id="@+id/HomeDriverimageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeCustomersimageButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/adm_driver" />

</androidx.constraintlayout.widget.ConstraintLayout>